--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Matrix Effect</title>
+  <title>Prateek's Blogs</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <canvas id="matrix"></canvas>
   <div class="content">
     <h1>Welcome!</h1>
-    <p>This is my portfolio demo with Matrix code rain.</p>
+    <p>This is my space where you can find information about me.</p>
   </div>
   <script src="matrix.js"></script>
 </body>
